--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,46 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+input {
+  width: 100%;
+  height: 100px;
+  padding: 20px;
+  font-size: 20px;
+  border: none;
+  box-sizing: border-box;
+  padding-left: 50px;
+}
+
+.simple-keyboard {
+  max-width: 100%;
+  height: 100;
+}
+
+/*
+  Theme: myTheme1
+*/
+.simple-keyboard.dark {
+  background-color: rgba(0, 0, 0, 0.8);
+  border-radius: 0;
+  border-bottom-right-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+
+.simple-keyboard.dark .hg-button {
+  height: 75px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(0, 0, 0, 0.5);
+  color: white;
+}
+
+.simple-keyboard.dark .hg-button:active {
+  background: #1c4995;
+  color: white;
+}
+
+#root .simple-keyboard.dark + .simple-keyboard-preview {
+  background: #1c4995;
+}
